--- a/community-modules/core/src/styles/ag-theme-base/sass/parts/_grid-layout.scss
+++ b/community-modules/core/src/styles/ag-theme-base/sass/parts/_grid-layout.scss
@@ -33,11 +33,11 @@
     }
 
     .ag-value-change-delta-up {
-        @include ag-color-param(color, value-change-delta-up-color);
+        @include ag-color-property(color, value-change-delta-up-color);
     }
 
     .ag-value-change-delta-down {
-        @include ag-color-param(color, value-change-delta-down-color);
+        @include ag-color-property(color, value-change-delta-down-color);
     }
 
     .ag-value-change-value {
@@ -49,12 +49,12 @@
     }
 
     .ag-value-change-value-highlight {
-        @include ag-color-param(background-color, value-change-value-highlight-background-color);
+        @include ag-color-property(background-color, value-change-value-highlight-background-color);
         transition: background-color 0.1s;
     }
 
     .ag-cell-data-changed {
-        @include ag-color-param(background-color, value-change-value-highlight-background-color, $important: true);
+        @include ag-color-property(background-color, value-change-value-highlight-background-color, $important: true);
     }
 
     .ag-cell-data-changed-animation {
@@ -63,7 +63,7 @@
     }
 
     .ag-cell-highlight {
-        @include ag-color-param(background-color, range-selection-highlight-color, $important: true);
+        @include ag-color-property(background-color, range-selection-highlight-color, $important: true);
     }
 
     .ag-cell-highlight-animation {
@@ -72,15 +72,15 @@
 
     .ag-row {
         height: ag-param(row-height);
-        @include ag-color-param(background-color, background-color);
-        @include ag-color-param(color, data-color);
+        @include ag-color-property(background-color, background-color);
+        @include ag-color-property(color, data-color);
         
         @if ag-param(row-border-color) and ag-param(borders-critical) {
             // NOTE: we define border-width and border-color at .ag-row level and only set
             // border-style inside nested pseudoclass selectors, to allow derived themes
             // to override border-width on .ag-row
             border-width: 1px;
-            @include ag-color-param(border-color, row-border-color);
+            @include ag-color-property(border-color, row-border-color);
 
             &:not(.ag-row-first) {
                 border-top-style: solid;
@@ -96,7 +96,7 @@
         position: absolute;
         width: calc(100% - 1px);
         height: 1px;
-        @include ag-color-param(background-color, range-selection-border-color);
+        @include ag-color-property(background-color, range-selection-border-color);
         left: 1px;
     }
 
@@ -114,7 +114,7 @@
 
     @if ag-param(odd-row-background-color) {
         .ag-row-odd {
-            @include ag-color-param(background-color, odd-row-background-color);
+            @include ag-color-property(background-color, odd-row-background-color);
         }
     }
 
@@ -127,7 +127,7 @@
     }
 
     .ag-row-hover {
-        @include ag-color-param(background-color, row-hover-color);
+        @include ag-color-property(background-color, row-hover-color);
     }
 
     .ag-numeric-cell {
@@ -167,12 +167,12 @@
         @include ag-card();
         padding: 0;
         height: ag-param(row-height);
-        @include ag-color-param(background-color, control-panel-background-color);
+        @include ag-color-property(background-color, control-panel-background-color);
     }
 
     .ag-popup-editor {
         @include ag-card();
-        @include ag-color-param(background-color, control-panel-background-color);
+        @include ag-color-property(background-color, control-panel-background-color);
         padding: 0;
     }
 
@@ -183,7 +183,7 @@
 
     .ag-details-row {
         padding: ag-param(grid-size) * 5;
-        @include ag-color-param(background-color, background-color);
+        @include ag-color-property(background-color, background-color);
     }
 
     .ag-overlay-loading-wrapper {
