--- a/community-modules/core/src/styles/ag-theme-base/sass/_ag-theme-base-mixin.scss
+++ b/community-modules/core/src/styles/ag-theme-base/sass/_ag-theme-base-mixin.scss
@@ -19,7 +19,7 @@
 $ag-compatibility-mode: "variables" !default;
 
 @mixin ag-theme-base($params: ()) {
-    $ag-require-colors-to-have-css-var-override: true !global;
+    @include ag-allow-color-param-access-with-ag-param(false);
     @include ag-include-theme-once-only();
     $params: ag-process-theme-variables($params, $ag-theme-base-default-params);
 
@@ -27,12 +27,12 @@ $ag-compatibility-mode: "variables" !default;
     @include ag-icons-webfont();
 
     -webkit-font-smoothing: antialiased;
-    @include ag-color-param(color, foreground-color);
+    @include ag-color-property(color, foreground-color);
     font-family: ag-param(font-family);
     font-size: ag-param(font-size);
     line-height: normal;
     .ag-root-wrapper {
-        @include ag-color-param(background-color, background-color);
+        @include ag-color-property(background-color, background-color);
     }
 
     @include ag-theme-base-part-reset();
@@ -52,5 +52,5 @@ $ag-compatibility-mode: "variables" !default;
     @if not ag-param(suppress-native-widget-styling) {
         @include ag-native-inputs();
     }
-    $ag-require-colors-to-have-css-var-override: false !global;
+    @include ag-allow-color-param-access-with-ag-param(true);
 }
