--- a/community-modules/core/src/styles/ag-theme-base/sass/parts/_columns-tool-panel.scss
+++ b/community-modules/core/src/styles/ag-theme-base/sass/parts/_columns-tool-panel.scss
@@ -27,6 +27,6 @@
 
     .ag-column-group-icons,
     .ag-column-select-header-icon {
-        @include ag-color-param(color, secondary-foreground-color);
+        @include ag-color-property(color, secondary-foreground-color);
     }
 }
